--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.11.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "vue-cli-service --openssl-legacy-provider serve",
+    "build": "vue-cli-service --openssl-legacy-provider build",
+    "lint": "vue-cli-service --openssl-legacy-provider lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.1",
